# keikeu

./: .CLAUDE.md.swp  .gitignore  AGENTS.md  CLAUDE.md  CONSTITUTION.md  Keikeu UI.html  README.md  READMECN.md  README_EN.md  SPEC.md  TECH_SPEC.md  appdesign.md  ethics.md  git-interactive.html  gitagent.md  gitspec.md  pyproject.toml  readmedesign.md  status.html  taks001.md  techpolicy.md
.ftest/: functest-1hana.md
docs/: PROJECT.md  RULES.md  SPEC.md  cold_start_report.md
docs/acceptance/: README.md  phase8-sop.md  phase8.md
docs/architecture/: architecture.html
docs/archive/: README.md
docs/assets/: map.css  map.js
docs/design/: design.html  interaction.html
docs/manual/: README.md  appdesign.md  ethics.md  git-interactive.html  gitspec.md
examples/: bug_cp.txt  output_sample.md
graphify-out/: .graphify_ast.json  .graphify_chunk_01.json  .graphify_detect.json  .graphify_python  .graphify_root  .graphify_uncached.txt
graphify-out/cache/: stat-index.json
keikeulog/: Agentic.md  LISSEZMOI-CHINOIS.md  LISSEZMOI.md
memory/: 2026-06-20-navigationrail-unbounded.md
memory/specs/: README.md  audit_review_vs_code_2026-07-04.md  audit_v01_to_v02_2026-07-13.md  issue_retrospective_v0_1.md  phase8_acceptance_2026-07-15.md  phase8_check_sop_2026-07-15.md  planbook_road_v0_2.md  requirements_discovery_v0_2.md  road_pre_advance.md  spec_road_v0_1.md  spec_road_v0_2.md
scripts/: check_docs.py
src/: main.py
src/keikeu/: app.py  clipboard.py  models.py  (+2 more)
tests/: test_app_pages.py  test_generator.py  test_indexer.py  test_local_state.py  test_markdown_io.py  test_migration_page.py  test_migration_v01.py  test_models.py  test_renderers.py  test_storage.py  test_v01_fixture.py  test_vault.py
(+67 files in other folders)
