[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "keikeu"
version = "0.1.0"
description = "Fanwork idea-to-brief tool. Turn one 饼胚 into SOP / Brief / Card Markdown."
requires-python = ">=3.11,<3.14"
dependencies = ["customtkinter"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
