[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keikeu"
version = "0.1.0"
requires-python = ">=3.11, <3.14"
dependencies = [
    "flet",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
keikeu = "keikeu_app.main:main"

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
