[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keikeu"
version = "0.1.0"
requires-python = ">=3.11, <3.14"
dependencies = [
    "flet",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
keikeu = "keikeu_app.main:run"

[tool.hatch.build.targets.wheel]
# Required: project name "keikeu" has no matching dir, so hatchling cannot
# auto-detect packages. List them explicitly. The sources remap drops the
# leading "src/" so they import as keikeu_core / keikeu_app.
packages = ["src/keikeu_core", "src/keikeu_app"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
